--- a/templates/about.html
+++ b/templates/about.html
@@ -19,7 +19,7 @@
 
     <img src="img/168925.jpg" alt="band" width="100%" height="200">
 
-    <p style="font-family:Quicksand, sans-serif; color: gray; font-size: 15px;"> We are four pianists that play solos, duets and even four-piece concerts across the UK. Our main gigs include weddings, birthdays, funerals, events and accompaniments for various choirs and orchestral concerts. We play jazz, pop, classical and have even been known to try our hand in heavy metal. Whatever you need, send through your requirements and we will see what we can do! </p>
+    <p style="font-family:Quicksand, sans-serif; color: gray; font-size: 15px;"> We are four pianists that play solos, duets and even four-piece concerts across the UK. Our main gigs include weddings, birthdays, funerals, events and accompaniments for various choirs and orchestral concerts. We play jazz, pop, classical, blues and electronic genres. Whatever you need, send through your requirements and we will see what we can do!  </p>
 
     <div ng-view>
     </div>
