--- a/css/style.css
+++ b/css/style.css
@@ -8,18 +8,33 @@ body{
 
 	.img-circle {
     border-radius: 50%;
+    padding: 20px;
 }
 
+iframe{
+  align-items: center;
+}
 h2{
 	 font-family: Quicksand, sans-serif;
   font-weight: 100;
 }
 
+
+
 .container{
-	padding: 50px;
   font-family: Quicksand, sans-serif;
   font-weight: 100;
-  padding: 20px;
+  background-color: black;
+  
+}
+
+ 
+.container-fluid{
+  margin-bottom: 50px;
+}
+
+.row{
+  
 }
 
 .somersault{
@@ -63,5 +78,9 @@ audio{
 	margin: 0 auto;
     text-align: center;
     width: 100%;
-    padding: 50px;
+    padding: 30px;
+}
+
+.jumbotron{
+  background-color: black;
 }
