--- a/templates/about.html
+++ b/templates/about.html
@@ -1,41 +1,19 @@
-<!DOCTYPE html>
-<html ng-app="BandApp">
-<head>
-    <base href="/"> 
-    <meta charset="utf-8">
-    <title>About band</title>
-    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
-    <link href="css/style.css" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|Quicksand:300,700">
-   
-</head>
-
-<body>
 <div class="container">
-    <div class="jumbatron">
+    <div class="jumbotron">
 
-    <img src="img/168925.jpg" alt="band" width="100%" height="200">
 
-    <p style="font-family:Quicksand, sans-serif; color: gray; font-size: 15px;"> We are four pianists that play solos, duets and even four-piece concerts across the UK. Our main gigs include weddings, birthdays, funerals, events and accompaniments for various choirs and orchestral concerts. We play jazz, pop, classical, blues and electronic genres. Whatever you need, send through your requirements and we will see what we can do! </p>
-
-    <div ng-view>
-    </div>
-        
-    </div>
-</div>
+      
+    
 	
 <div class="container-fluid">
 
 	<div class="row">
 
-		<div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+		<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
     		<h2>Jo</h2>
     		<img class="img-circle" src="/../img/jo2.jpg" alt="jo" width="200px" height="200px">
 
-          <button type="button" class="btn btn-outline-secondary btn-sm" data-toggle="modal" data-target="#myModal">About Jo</button>
+          <button type="button" class="btn btn-outline-secondary btn-xs" data-toggle="modal" data-target="#myModal">About Jo</button>
 
 <!-- Modal -->
 <div id="myModal" class="modal fade" role="dialog">
@@ -64,11 +42,11 @@
 </div>
 
         </div>
-      	<div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+      	<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
       		<h2>Nathan</h2>
     		<img class="img-circle" src="/../img/nathan3.jpg" alt="nathan" width="200px" height="200px">
     		
-        <button type="button" class="btn btn-outline-secondary btn-sm" data-toggle="modal" data-target="#myModal">About Nathan</button>
+        <button type="button" class="btn btn-outline-secondary btn-xs" data-toggle="modal" data-target="#myModal">About Nathan</button>
 
 <!-- Modal -->
 <div id="myModal" class="modal fade" role="dialog">
@@ -97,12 +75,12 @@
 </div>
       	</div>
 
-      		<div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+      		<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
       		<h2>Kyle</h2>
     		<img class= "img-circle" src="/../img/kyle2.jpg" alt="kyle" width="200px" height="200px">
     	
 
-        <button type="button" class="btn btn-outline-secondary btn-sm" data-toggle="modal" data-target="#myModal">About Kyle</button>
+        <button type="button" class="btn btn-outline-secondary btn-xs" data-toggle="modal" data-target="#myModal">About Kyle</button>
 
 <!-- Modal -->
 <div id="myModal" class="modal fade" role="dialog">
@@ -131,12 +109,12 @@
 </div>
       	</div>
 
-      	<div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+      	<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
       		<h2>Alice</h2>
     		<img class="img-circle" src="/../img/alice.jpg" alt="william" width="200px" height="200px">
     		
 
-        <button type="button" class="btn btn-outline-secondary btn-sm" data-toggle="modal" data-target="#myModal">About Alice</button>
+        <button type="button" class="btn btn-outline-secondary btn-xs" data-toggle="modal" data-target="#myModal">About Alice</button>
 
 <!-- Modal -->
 <div id="myModal" class="modal fade" role="dialog">
@@ -170,7 +148,4 @@
 
 </div>
 
-</body>
-<script src='http://code.jquery.com/jquery.min.js'></script>
-<script src='bootstrap/js/bootstrap.min.js'></script>
-</html>
+
