centering and tidy up

--- a/templates/availability.html
+++ b/templates/availability.html
@@ -34,7 +34,7 @@
                         <p ng-show="availabilityForm.password.$pristine" class="help-block"></p>
                     </div>
 
-                    <button type="submit" class="btn btn-default" ng-disabled="availabilityForm.$invalid">Submit for costs</button>
+                    <button type="submit" class="btn btn-default" >Submit for costs</button>
                 </form>
             </div>
         </div>
