--- a/css/style.css
+++ b/css/style.css
@@ -72,6 +72,9 @@ img{
 
 /* listen */
 
+.container-fluid{
+  padding: 50px;
+}
 audio{
   margin: 0 auto;
   text-align: center;
@@ -105,7 +108,13 @@ table{
 
 .container-form{
   border: 2px solid gray;
-  padding: 20px;
+  padding: 30px;
+  margin: 0 auto; 
+  width:750px;
+}
+
+.row{
+  margin: 0 auto;
   text-align: center;
 }
 
