--- a/templates/home.html
+++ b/templates/home.html
@@ -22,7 +22,7 @@
                    
                     <div class="modal-footer">
                     <button type="submit" class="btn btn-primary" data-dismiss="modal">Submit</button>
-                    <button type="close" class="btn btn-default">Close</button>
+                    <button type="close" class="btn btn-default" data-dismiss="modal">Close</button>
                 </div>
                 </form>
                 
@@ -95,6 +95,21 @@
     </div>
   </div>
 
+<footer class="col-12">
+            <div>
+                <a href="[full link to your Twitter]">
+                    <img title="Twitter" alt="Twitter" src="https://socialmediawidgets.files.wordpress.com/2014/03/01_twitter.png" width="100" height="100" />
+                </a>
+                <a href="[full link to your Facebook page]">
+                    <img title="Facebook" alt="Facebook" src="https://socialmediawidgets.files.wordpress.com/2014/03/02_facebook.png" width="100" height="100" />
+                </a>
+                <a href="[full link to your LinkedIn]">
+                    <img title="LinkedIn" alt="LinkedIn" src="https://socialmediawidgets.files.wordpress.com/2014/03/07_linkedin.png" width="100" height="100" />
+                </a>
+                <a href="[full link to your Instagram]">
+                    <img title="Instagram" alt="RSS" src="https://socialmediawidgets.files.wordpress.com/2014/03/10_instagram.png" width="100" height="100" />
+                </a>
+        </footer>
 
 <script type="text/javascript">
 $(document).ready(function () {
