--- a/templates/gigs.html
+++ b/templates/gigs.html
@@ -1,5 +1,8 @@
-
-        <table>
+<div class="header-img">
+    <img src="img/robert.jpg" alt="band" >
+    <div class="booking-text">
+</div>
+        <table><span>
           <tbody>
             <tr>
                 <th>DATE</th>
@@ -27,6 +30,8 @@
                 <td><a href="#" class="btn btn-default">Book</a></td>     
             </tr>
            </tbody>
-        </table>
+        </span></table>
+
+</div>
 
 
