--- a/templates/home.html
+++ b/templates/home.html
@@ -34,14 +34,26 @@
   </div>
 </div>
 
+  <div>
+
+<div class="header-img">
+    <img src="img/168925.jpg" alt="band" >
+    <div class="header-text">
+    <h1><span> IT'S ALL ABOUT THE MUSIC </span></h1>
+</div>
+
+
+<br>
 
   <div class="container-fluid">
 
     <div class="row">
 
-      
-            
-        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6" class="box" id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6" class="box">
+            <p style="font-family:Quicksand, sans-serif; color: #353531; font-size: 17px;"> <br/> <br/> We are two pianists and two electronic producers that can play live or provide sets across the UK. We create atmospheric background music for parties, events and exhibitions as well as perform and do workshops at schools and universities. Whatever you need, send through your requirements and we will see what we can do. </p>
+        </div>
+
+       <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6" class="box" id="carousel-example-generic" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
   <ol class="carousel-indicators">
     <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
@@ -52,19 +64,19 @@
   <!-- Wrapper for slides -->
   <div class="carousel-inner" role="listbox">
     <div class="item active">
-      <img src="/img/72315.jpg" alt="graphic1">
+      <img src="/img/electronic.jpg" alt="graphic1">
       <div class="carousel-caption">
         
       </div>
     </div>
     <div class="item">
-      <img src="/img/41687.jpg" alt="graphic2">
+      <img src="/img/jamesblake.jpg" alt="graphic2">
       <div class="carousel-caption">
         
       </div>
     </div>
     <div class="item">
-      <img src="img/44457.jpg" alt="graphic3">
+      <img src="img/eye.jpg" alt="graphic3">
       <div class="carousel-caption">
 
       
@@ -85,31 +97,44 @@
  </div>
 </div>
 
-            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6" class="box">
-            <p style="font-family:Quicksand, sans-serif; color: gray; font-size: 17px;"> <br/> <br/> We are four pianists that play solos, duets and even four-piece concerts across the UK. Our main gigs include weddings, birthdays, funerals, events and accompaniments for various choirs and orchestral concerts. We play jazz, pop, classical, blues and electronic genres. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor occaecat cupidatat non
-            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Whatever you need, send through your requirements and we will see what we can do! </p>
-        </div>
+
+
+ <!--<audio controls >
+  <source src="audio/Wooden Flame.mp3" type="audio/mpeg">
+Your browser does not support the audio element.
+</audio></div>-->
 
 
     </div>
   </div>
+ 
+ 
+</div>
 
-<footer class="col-12">
+<div>
+<footer >
             <div>
                 <a href="[full link to your Twitter]">
-                    <img title="Twitter" alt="Twitter" src="https://socialmediawidgets.files.wordpress.com/2014/03/01_twitter.png" width="100" height="100" />
+                    <img title="Twitter" alt="Twitter" src="https://socialmediawidgets.files.wordpress.com/2014/03/01_twitter.png" width="50" height="50" />
                 </a>
                 <a href="[full link to your Facebook page]">
-                    <img title="Facebook" alt="Facebook" src="https://socialmediawidgets.files.wordpress.com/2014/03/02_facebook.png" width="100" height="100" />
+                    <img title="Facebook" alt="Facebook" src="https://socialmediawidgets.files.wordpress.com/2014/03/02_facebook.png" width="50" height="50" />
                 </a>
                 <a href="[full link to your LinkedIn]">
-                    <img title="LinkedIn" alt="LinkedIn" src="https://socialmediawidgets.files.wordpress.com/2014/03/07_linkedin.png" width="100" height="100" />
+                    <img title="LinkedIn" alt="LinkedIn" src="https://socialmediawidgets.files.wordpress.com/2014/03/07_linkedin.png" width="50" height="50" />
                 </a>
                 <a href="[full link to your Instagram]">
-                    <img title="Instagram" alt="RSS" src="https://socialmediawidgets.files.wordpress.com/2014/03/10_instagram.png" width="100" height="100" />
+                    <img title="Instagram" alt="RSS" src="https://socialmediawidgets.files.wordpress.com/2014/03/10_instagram.png" width="50" height="50" />
                 </a>
-        </footer>
+              <br>
+              <br>
+
+
+              <a href="https://geo.itunes.apple.com/us/album/piano-music/id528447805?i=528447808&mt=1&app=music" style="display:inline-block;overflow:hidden;background:url(//tools.applemusic.com/assets/shared/badges/en-gb/music-lrg.svg) no-repeat;width:115px;height:40px;"></a>
+
+</footer>
+
+</div>
 
 <script type="text/javascript">
 $(document).ready(function () {
@@ -117,4 +142,6 @@ $(document).ready(function () {
     $('#myModal').modal('show');
 
 });
+
+
 </script> 
