--- a/templates/listen.html
+++ b/templates/listen.html
@@ -1,5 +1,11 @@
 <link href="/css/style.css" rel="stylesheet" type="text/css">
 
+<div class="header-img">
+    <img src="img/austin.jpg" alt="band" >
+    <div class="header-text">
+    <h1><span> Head down to hear us </span></h1>
+</div>
+
 <div class="container-fluid">
 
     <div class="row">
@@ -38,7 +44,7 @@ Your browser does not support the audio element.
 
 
             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6" class="box">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/AtxRk7kzU0Q" frameborder="0" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://youtu.be/vZSCOtIu9tY" frameborder="0" allowfullscreen></iframe>
         </div>
 
 
