--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,34 @@
 /* index */
 
+.header-img{
+  width: 100%;
+
+}
+
+.header-img img{
+  width: 100%;
+  height: 1000px;
+}
+
+.header-text 
+{
+  width:100%;
+  position:fixed;
+  margin-top: -60%;
+}
+
+.header-text h1{
+  text-align:center;
+  color: white;
+
+}
+
 body{
-  background-color: black;
+  background-color: white;
   }
 
   .navbar-brand{
-  font-size: 60px;
+  font-size: 20px;
   font-family: Quicksand, sans-serif;
   font-weight: 100;
  
@@ -13,18 +36,36 @@ body{
 }
 
 .navbar-nav{
-  background-color: black;
+  background-color: transparent;
   background-image: none;
+  border: 0;
+  padding-right: 40px;
   
 }
 
 .navbar{
-  background-color: black;
+  position: fixed;
+  width: 100%;
+  background-color: transparent;
   background-image: none;
-   font-size: 20px;
+   font-size: 15px;
   font-family: Quicksand, sans-serif;
   font-weight: 100;
+  border: 0;
+
   
+}
+
+
+audio{
+  width: 30%;
+  align-items: right;
+
+}
+
+h1{
+  font-family: Quicksand, sans-serif;
+  font-weight: 100;
 }
 
 /* about */
@@ -34,30 +75,6 @@ h2{
   font-weight: 100;
 }
 
-.container{
-  font-family: Quicksand, sans-serif;
-  font-weight: 100;
-  background-color: black;
-  
-}
-
-.jumbotron{
-  background-color: black;
-}
-
- 
-.container-fluid{
-  margin-bottom: 50px;
-}
-
-.img-circle {
-    border-radius: 50%;
-    padding: 20px;
-}
-
-img{
-  padding: 20px;
-}
 
 .btn.outline {
   background: none;
@@ -67,6 +84,26 @@ img{
 .btn-primary.outline {
   border: 2px solid #0099cc;
   color: #0099cc;
+}
+
+#jo{
+  position: fixed;
+  left: 50px; top: 90px; z-index: 200;
+}
+
+#kyle{
+position: fixed;
+  left: 200px; top: 200px; z-index: 200;
+}
+
+#alice{
+position: fixed;
+  right: 50px; top: 90px; z-index: 200;
+}
+
+#nathan{
+  position: fixed;
+  right: 200px; top: 200px; z-index: 200;
 }
 
 
@@ -84,8 +121,18 @@ audio{
 /* gigs */
 
 table{
-    border: 2px solid gray;
+
+  width:100%;
+  position:fixed;
+  margin-top: -72%;
    }
+
+   .booking-text{
+  width:100%;
+  position:fixed;
+  margin-top: -72%;
+   font-family: Quicksand, sans-serif;
+}
         
            td, th {
       width: 500px;
@@ -93,48 +140,63 @@ table{
       border: 1px none #ccc;
       text-align: center;
       color: white;
+       font-family: Quicksand, sans-serif;
     }
     th {
       color: white;
       font-size: 20px;
+       font-family: Quicksand, sans-serif;
     }
     body {
       padding: 1rem;
-      font-family: Roboto;
+       font-family: Quicksand, sans-serif;
       font-size: 15px;
     }
 
 /* availability */
 
+.form-title{
+  color: #538A8A;
+   font-family: Quicksand, sans-serif;
+}
 .container-form{
-  border: 2px solid gray;
+   left: 90px; top: 90px; z-index: 200;
+  width:100%;
+  position:absolute;
+  margin-top: -75%;
+  /*border: 2px solid gray;*/
   padding: 30px;
   margin: 0 auto; 
   width:750px;
+   font-family: Quicksand, sans-serif;
+
+}
+
+h1{
+  font-size:40px;
+  font-weight: 200;
+
 }
 
 .row{
   margin: 0 auto;
   text-align: center;
+   font-family: Quicksand, sans-serif;
 }
 
 label{
   font-size: 20px;
+  color: #F9FF33;
+  font-weight: 200;
+   font-family: Quicksand, sans-serif;
 }
 
 .help-block{
-  font-size: 5px;
+  font-size: 15px;
+  font-weight: 200;
+  color: red;
+   font-family: Quicksand, sans-serif;
 }
-
-
-
-
-
-
-
-
-
-
 
 
 .item{
