--- a/templates/about.html
+++ b/templates/about.html
@@ -1,15 +1,10 @@
-<div class="container">
-    <div class="jumbotron">
-	
-<div class="container-fluid">
 
-	<div class="row">
+<div class="header-img">
+    <img src="img/egor.jpg" alt="band" >
+    <div class="header-text">
+</div>
 
-		<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-    		<h2>Jo</h2>
-    		<img class="img-circle" src="/../img/jo2.jpg" alt="jo" width="400px" height="400px">
-
-          <button type="button" class="btn btn-outline-secondary btn-xs" data-toggle="modal" data-target="#myModal">About Jo</button>
+          <a id="jo" style="color:white; font-size: 40px; font-weight: 300; text-decoration: none;" href="#" data-toggle="modal" data-target="#myModal">Jo</a>
 
 <!-- Modal -->
 <div id="myModal" class="modal fade" role="dialog">
@@ -34,17 +29,14 @@
       </div>
     </div>
 
-  </div>
+
 </div>
 
         </div>
-      	
-      		<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-      		<h2>Kyle</h2>
-    		<img class= "img-circle" src="/../img/kyle2.jpg" alt="kyle" width="400px" height="400px">
+      
     	
 
-        <button type="button" class="btn btn-outline-secondary btn-xs" data-toggle="modal" data-target="#myModal">About Kyle</button>
+        <a id="kyle" style="color:white; font-size: 40px; font-weight: 300; text-decoration: none;" href="#" data-toggle="modal" data-target="#myModal">Kyle</a>
 
 <!-- Modal -->
 <div id="myModal" class="modal fade" role="dialog">
@@ -72,13 +64,9 @@
   </div>
 </div>
       	</div>
-
-      	<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-      		<h2>Alice</h2>
-    		<img class="img-circle" src="/../img/alice.jpg" alt="william" width="400px" height="400px">
     		
 
-        <button type="button" class="btn btn-outline-secondary btn-xs" data-toggle="modal" data-target="#myModal">About Alice</button>
+        <a id="alice" style="color:white; font-size: 40px; font-weight: 300; text-decoration: none;" href="#" data-toggle="modal" data-target="#myModal">Alice</a>
 
 <!-- Modal -->
 <div id="myModal" class="modal fade" role="dialog">
@@ -110,11 +98,8 @@
 
 
 
-<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-          <h2>Nathan</h2>
-        <img class="img-circle" src="/../img/nathan3.jpg" alt="nathan" width="400px" height="400px">
         
-        <button type="button" class="btn btn-outline-secondary btn-xs" data-toggle="modal" data-target="#myModal">About Nathan</button>
+       <a id="nathan" style="color:white; font-size: 40px; font-weight: 300; text-decoration: none;" href="#" data-toggle="modal" data-target="#myModal">Nathan</a>
 
 <!-- Modal -->
 <div id="myModal" class="modal fade" role="dialog">
@@ -144,6 +129,39 @@
         </div>
 </div>
 </div>
+
+<script>
+
+$("#nathan").hover(function(){
+        $(this).css('color', '#427054');
+    });
+    $('#nathan').mouseout(function(){
+        $(this).css('color', 'white');
+    });
+
+    $("#jo").hover(function(){
+        $(this).css('color', '#5D1543');
+    });
+    $('#jo').mouseout(function(){
+        $(this).css('color', 'white');
+    });
+
+    $("#alice").hover(function(){
+        $(this).css('color', '#375885');
+    });
+    $('#alice').mouseout(function(){
+        $(this).css('color', 'white');
+    });
+
+    $("#kyle").hover(function(){
+        $(this).css('color', '#987FB8');
+    });
+    $('#kyle').mouseout(function(){
+        $(this).css('color', 'white');
+    });
+
+
+</script>
 
 
 
