--- a/templates/availability.html
+++ b/templates/availability.html
@@ -1,7 +1,8 @@
-<div>
-    
-    <div class="container-form">
-        <h1>Check our availability:</h1>
+<div class="header-img">
+    <img src="img/168925.jpg" alt="band" >
+    <div class="form-text"></div>
+   <div class="container-form">
+        <h1 class="form-title">Want to know when we're available?</h1>
         <div class="row">
             <div class="col-sm-6" style="text-align: center;">
                 <form name="availabilityForm" ng-submit="submitForm()" novalidate>
@@ -40,3 +41,4 @@
         </div>
     </div>
 </div>
+
