--- a/templates/availability.html
+++ b/templates/availability.html
@@ -7,7 +7,7 @@
             <div class="col-sm-6" style="text-align: center;">
                 <form name="availabilityForm" ng-submit="submitForm()" novalidate>
                     <div class="form-group">
-                        <label>First Name</label>
+                        <label>First name</label>
                         <input type="text" name="name" class="form-control" ng-model="user.name" required>
                         <p ng-show="availabilityForm.name.$pristine" class="help-block">Your first name is required</p>
                     </div>
