--- a/templates/listen.html
+++ b/templates/listen.html
@@ -10,7 +10,7 @@
 
     <div class="row">
 
-        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6" class ="box">
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" class ="box">
             
     
             
@@ -29,12 +29,9 @@ Your browser does not support the audio element.
 <br/>
 <br/>
 
-  <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-  consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-  cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-  proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  <p> The main trait of Monochrome Music is their ability to improvise and tailor performance to the setting. This could be very quiet, ambient and piano-heavy, or deep, progressive and electronic - serving perfectly as background music. Notes is almost exactly what you might expect from a record like this one; it’s spare, it’s lyrical, it’s unobtrusive. The piano is put into a number of different contexts, adding electronics to create ethereal, emotion-evoking tracks such as these. 
+
+</p>
 
             
             
@@ -42,10 +39,15 @@ Your browser does not support the audio element.
             
         
 
+<!--<a href="https://geo.itunes.apple.com/us/album/piano-music/id528447805?i=528447808&mt=1&app=music" style="display:inline-block;overflow:hidden;background:url(//tools.applemusic.com/assets/shared/badges/en-gb/music-lrg.svg) no-repeat;width:115px;height:40px;"></a>-->
 
-            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6" class="box">
-            <iframe width="560" height="315" src="https://youtu.be/vZSCOtIu9tY" frameborder="0" allowfullscreen></iframe>
-        </div>
+            <div class="col-md-12">
+
+<iframe class="col-sm-6" width="560" height="315" frameborder="0" wmode="Opaque" allowfullscreen="" src="https://www.youtube.com/embed/4XMTfx30Dnc"></iframe>
+
+<iframe class="col-sm-6" width="560" height="315" frameborder="0" wmode="Opaque" allowfullscreen="" src="https://www.youtube.com/embed/Vfb9GLG_7_Q"></iframe>
+</div>
+
 
 
     </div>
