--- a/templates/about.html
+++ b/templates/about.html
@@ -4,17 +4,16 @@
     <div class="header-text">
 </div>
 
-          <a id="jo" style="color:white; font-size: 40px; font-weight: 300; text-decoration: none;" href="#" data-toggle="modal" data-target="#myModal">Jo</a>
+          <a id="jo" style="color:white; font-size: 40px; font-weight: 300; text-decoration: none;" href="#" data-toggle="modal" data-target="#myModal1">Jo</a>
 
 <!-- Modal -->
-<div id="myModal" class="modal fade" role="dialog">
+<div id="myModal1" class="modal fade" role="dialog">
   <div class="modal-dialog modal-lg">
 
     <!-- Modal content-->
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4 class="modal-title">Hey Guys</h4>
       </div>
       <div class="modal-body">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -23,6 +22,7 @@
             consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
             cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
             proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <img class="img-responsive" src="img/eva3.jpg" alt="Jo" style="width:200px;height:220px;align-items:center">
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-outline-secondary" data-dismiss="modal">Close</button>
@@ -36,17 +36,16 @@
       
     	
 
-        <a id="kyle" style="color:white; font-size: 40px; font-weight: 300; text-decoration: none;" href="#" data-toggle="modal" data-target="#myModal">Kyle</a>
+        <a id="kyle" style="color:white; font-size: 40px; font-weight: 300; text-decoration: none;" href="#" data-toggle="modal" data-target="#myModal2">Kyle</a>
 
 <!-- Modal -->
-<div id="myModal" class="modal fade" role="dialog">
+<div id="myModal2" class="modal fade" role="dialog">
   <div class="modal-dialog modal-lg">
 
     <!-- Modal content-->
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4 class="modal-title">Hey Guys</h4>
       </div>
       <div class="modal-body">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -55,6 +54,8 @@
             consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
             cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
             proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <img class="img-responsive" src="img/ryan4.jpg" alt="Jo" style="width:200px;height:220px;">
+
       </div>
       <div class="modal-footer">
         <button type="button" class="btn.outline btn-secondary" data-dismiss="modal">Close</button>
@@ -66,17 +67,16 @@
       	</div>
     		
 
-        <a id="alice" style="color:white; font-size: 40px; font-weight: 300; text-decoration: none;" href="#" data-toggle="modal" data-target="#myModal">Alice</a>
+        <a id="alice" style="color:white; font-size: 40px; font-weight: 300; text-decoration: none;" href="#" data-toggle="modal" data-target="#myModal3">Alice</a>
 
 <!-- Modal -->
-<div id="myModal" class="modal fade" role="dialog">
+<div id="myModal3" class="modal fade" role="dialog">
   <div class="modal-dialog modal-lg">
 
     <!-- Modal content-->
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4 class="modal-title">Hey Guys</h4>
       </div>
       <div class="modal-body">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -85,6 +85,8 @@
             consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
             cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
             proident, sunt in culpa qui officia deserunt mollit anim id est laborum..</p>
+        <img class="img-responsive" src="img/warren8.jpg" alt="Jo" style="width:200px;height:220px;">
+
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-outline-secondary" data-dismiss="modal">Close</button>
@@ -99,17 +101,16 @@
 
 
         
-       <a id="nathan" style="color:white; font-size: 40px; font-weight: 300; text-decoration: none;" href="#" data-toggle="modal" data-target="#myModal">Nathan</a>
+       <a id="nathan" style="color:white; font-size: 40px; font-weight: 300; text-decoration: none;" href="#" data-toggle="modal" data-target="#myModal4">Nathan</a>
 
 <!-- Modal -->
-<div id="myModal" class="modal fade" role="dialog">
+<div id="myModal4" class="modal fade" role="dialog">
   <div class="modal-dialog modal-lg">
 
     <!-- Modal content-->
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4 class="modal-title">Hey Guys</h4>
       </div>
       <div class="modal-body">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -118,6 +119,8 @@
             consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
             cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
             proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <img class="img-responsive" src="img/brooke5.jpg" alt="Jo" style="width:200px;height:220px;">
+
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-outline-secondary" data-dismiss="modal">Close</button>
