--- a/templates/home.html
+++ b/templates/home.html
@@ -2,7 +2,6 @@
 <div id="myModal" class="modal fade" role="dialog">
   <div class="modal-dialog modal-lg">
 
-    <!-- Modal content-->
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
@@ -11,17 +10,17 @@
       <div class="modal-body">
                     <form name="todoForm" ng-submit="submitForm()" novalidate>
                     <div class="form-group">
-                        <label>Name</label>
+                        <label class="pop">Name</label>
                         <input type="text" name="name" class="form-control" ng-model="todo.title" required>
                         
                     </div>
                     <div class="form-group">
-                        <label>Email</label>
+                        <label class="pop">Email</label>
                         <input type="email" name="email" class="form-control" ng-model="todo.description" required>
                         
                    
                     <div class="modal-footer">
-                    <button type="submit" class="btn btn-primary" data-dismiss="modal">Submit</button>
+                    <button type="submit" class="btn btn-default" data-dismiss="modal">Submit</button>
                     <button type="close" class="btn btn-default" data-dismiss="modal">Close</button>
                 </div>
                 </form>
@@ -34,14 +33,13 @@
   </div>
 </div>
 
-  <div>
 
 <div class="header-img">
     <img src="img/168925.jpg" alt="band" >
     <div class="header-text">
-    <h1><span> IT'S ALL ABOUT THE MUSIC </span></h1>
+    <h1><span> MONOCHROME MUSIC </span></h1>
 </div>
-
+</div>
 
 <br>
 
@@ -49,8 +47,16 @@
 
     <div class="row">
 
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" class="box">
+            <p style="font-family:Quicksand, sans-serif; color: #353531; font-size: 17px;"> <br/> <br/> We are two pianists and two electronic producers that play live or prerecorded sets across the UK. We mainly create atmospheric background music for parties, events and exhibitions as well as perform live and provide workshops to schools and universities. Send through your details and we will let you know our availability and pricing. </p>
+              <a class="avail-btn btn btn-default" style="color: black; text-decoration:none;"href="/availability">Availability</a> 
+            </div>
+            </div>
+                    
             <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6" class="box">
-            <p style="font-family:Quicksand, sans-serif; color: #353531; font-size: 17px;"> <br/> <br/> We are two pianists and two electronic producers that can play live or provide sets across the UK. We create atmospheric background music for parties, events and exhibitions as well as perform and do workshops at schools and universities. Whatever you need, send through your requirements and we will see what we can do. </p>
+
+                    <img class="img-responsive" src="img/markus-gjengaar.jpg" alt="Jo" style="align-items:center;">
+
         </div>
 
        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6" class="box" id="carousel-example-generic" class="carousel slide" data-ride="carousel">
@@ -64,19 +70,19 @@
   <!-- Wrapper for slides -->
   <div class="carousel-inner" role="listbox">
     <div class="item active">
-      <img src="/img/electronic.jpg" alt="graphic1">
+      <img class="img-responsive" src="/img/soren.jpg" alt="graphic1">
       <div class="carousel-caption">
         
       </div>
     </div>
     <div class="item">
-      <img src="/img/jamesblake.jpg" alt="graphic2">
+      <img class="img-responsive" src="/img/jamille.jpg" alt="graphic2">
       <div class="carousel-caption">
         
       </div>
     </div>
     <div class="item">
-      <img src="img/eye.jpg" alt="graphic3">
+      <img class="img-responsive" src="img/ian-dooley.jpg" alt="graphic3">
       <div class="carousel-caption">
 
       
@@ -109,32 +115,8 @@ Your browser does not support the audio element.
   </div>
  
  
-</div>
-
-<div>
-<footer >
-            <div>
-                <a href="[full link to your Twitter]">
-                    <img title="Twitter" alt="Twitter" src="https://socialmediawidgets.files.wordpress.com/2014/03/01_twitter.png" width="50" height="50" />
-                </a>
-                <a href="[full link to your Facebook page]">
-                    <img title="Facebook" alt="Facebook" src="https://socialmediawidgets.files.wordpress.com/2014/03/02_facebook.png" width="50" height="50" />
-                </a>
-                <a href="[full link to your LinkedIn]">
-                    <img title="LinkedIn" alt="LinkedIn" src="https://socialmediawidgets.files.wordpress.com/2014/03/07_linkedin.png" width="50" height="50" />
-                </a>
-                <a href="[full link to your Instagram]">
-                    <img title="Instagram" alt="RSS" src="https://socialmediawidgets.files.wordpress.com/2014/03/10_instagram.png" width="50" height="50" />
-                </a>
-              <br>
-              <br>
 
 
-              <a href="https://geo.itunes.apple.com/us/album/piano-music/id528447805?i=528447808&mt=1&app=music" style="display:inline-block;overflow:hidden;background:url(//tools.applemusic.com/assets/shared/badges/en-gb/music-lrg.svg) no-repeat;width:115px;height:40px;"></a>
-
-</footer>
-
-</div>
 
 <script type="text/javascript">
 $(document).ready(function () {
