--- a/css/style.css
+++ b/css/style.css
@@ -8,11 +8,6 @@ a {
   text-decoration: none;
 }
 
-.header-img{
-  width: 100%;
-
-}
-
 .header-img img{
   width: 100%;
   height: 1000px;
@@ -209,8 +204,19 @@ table{
 
    }
 
+   .gigs-img{
+    position: relative;
+    text-align: center;
+    color: black;
+   }
    .booking-text{
+    position: absolute;
+    top: 25%;
+    left: 50%;
+    transform: translate(-50%, -50%);
   width:100%;
+   font-size:15px;
+  font-weight: 200;
    font-family: Quicksand, sans-serif;
 }
         
@@ -219,12 +225,13 @@ table{
       height: 100px;
       border: 1px none #ccc;
       text-align: center;
-      color: black;
+      color: white;
        font-family: Quicksand, sans-serif;
     }
     th {
       color: grey;
-      font-size: 20px;
+       font-weight: 200;
+      font-size: 30px;
        font-family: Quicksand, sans-serif;
     }
     body {
@@ -232,6 +239,11 @@ table{
        font-family: Quicksand, sans-serif;
       font-size: 15px;
       color: red;
+    }
+
+    tbody{
+      margin-top: 40px;
+
     }
 
 
