--- a/templates/home.html
+++ b/templates/home.html
@@ -49,7 +49,7 @@
 
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" class="box">
             <p style="font-family:Quicksand, sans-serif; color: #353531; font-size: 17px;"> <br/> <br/> We are two pianists and two electronic producers that play live or prerecorded sets across the UK. We mainly create atmospheric background music for parties, events and exhibitions as well as perform live and provide workshops to schools and universities. Send through your details and we will let you know our availability and pricing. </p>
-              <a class="avail-btn btn btn-default" style="color: black; text-decoration:none;"href="/availability">Availability</a> 
+              <a class="avail-btn btn btn-default" style="color: black; text-decoration:none;" href="/book/availability">Availability</a> 
             </div>
             </div>
                     
