--- a/templates/home.html
+++ b/templates/home.html
@@ -70,13 +70,13 @@
   <!-- Wrapper for slides -->
   <div class="carousel-inner" role="listbox">
     <div class="item active">
-      <img class="img-responsive" src="/img/soren.jpg" alt="graphic1">
+      <img class="img-responsive" src="img/soren.jpg" alt="graphic1">
       <div class="carousel-caption">
         
       </div>
     </div>
     <div class="item">
-      <img class="img-responsive" src="/img/jamille.jpg" alt="graphic2">
+      <img class="img-responsive" src="img/jamille.jpg" alt="graphic2">
       <div class="carousel-caption">
         
       </div>
