--- a/templates/listen.html
+++ b/templates/listen.html
@@ -13,9 +13,12 @@
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" class ="box">
             
     
-            
-  <audio controls>
-  
+            <audio controls>
+ -  <source src="audio/We're on the same side.mp3" type="audio/mpeg">
+ -Your browser does not support the audio element.
+ -</audio>
+ -<a href="https://itunes.apple.com/us/podcast/brainstorm/id755050884?mt=2&uo=4" target="itunes_store" style="display:inline-block;overflow:hidden;background:url('//linkmaker.itunes.apple.com/htmlResources/assets//images/web/linkmaker/badge_appstore-sm.png') no-repeat;width:61px;height:15px;"></a>
+ -<br/>  
 <audio controls>
   <source src="audio/Wooden Flame.mp3" type="audio/mpeg">
 Your browser does not support the audio element.
