--- a/templates/about.html
+++ b/templates/about.html
@@ -16,12 +16,7 @@
         <button type="button" class="close" data-dismiss="modal">&times;</button>
       </div>
       <div class="modal-body">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p>I started playing the piano when I was 5 and have played most days since. In my spare time I enjoy water sports and trying my hand at some DIY.</p>
         <img class="img-responsive" src="img/eva3.jpg" alt="Jo" style="width:200px;height:220px;align-items:center">
       </div>
       <div class="modal-footer">
@@ -48,12 +43,7 @@
         <button type="button" class="close" data-dismiss="modal">&times;</button>
       </div>
       <div class="modal-body">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p>Growing up I was exposed to singers like Carole King and James Taylor. It wasn't until I was 15 that I learnt some music tech and I never looked back.</p>
         <img class="img-responsive" src="img/ryan4.jpg" alt="Jo" style="width:200px;height:220px;">
 
       </div>
@@ -79,12 +69,7 @@
         <button type="button" class="close" data-dismiss="modal">&times;</button>
       </div>
       <div class="modal-body">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-            proident, sunt in culpa qui officia deserunt mollit anim id est laborum..</p>
+        <p>I studied music technology at university and found it came naturally to me. I've been inspired by producers like Nils Frahm and Olafur Arnaulds.</p>
         <img class="img-responsive" src="img/warren8.jpg" alt="Jo" style="width:200px;height:220px;">
 
       </div>
@@ -113,12 +98,7 @@
         <button type="button" class="close" data-dismiss="modal">&times;</button>
       </div>
       <div class="modal-body">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p>Playing the piano is a necessity for me. I learnt when I was 14 and have collaborated with classical musicians and producers ever since.</p>
         <img class="img-responsive" src="img/brooke5.jpg" alt="Jo" style="width:200px;height:220px;">
 
       </div>
